loaded and previewed data

--- a/Forecast_Model_with_Deep_Learning.ipynb
+++ b/Forecast_Model_with_Deep_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgM/e7J0ANO4rUd1rrreMI",
+      "authorship_tag": "ABX9TyPFv2szWTOkkr0kz3iYuTcT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
       "source": [
         "# loading libraries\n",
         "\n",
-        "from pandas import DataFrame, read_csv\n",
+        "from pandas import DataFrame, read_csv,read_excel\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import os, shutil\n",
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "iOg7fnxHK6fv"
       },
-      "execution_count": 33,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -958,7 +958,7 @@
       "metadata": {
         "id": "XMEEPw_12oQ1"
       },
-      "execution_count": 54,
+      "execution_count": 57,
       "outputs": []
     },
     {
